--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="shortcut icon" href="faviconMS2.png" type="image/x-icon">
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/faviconMS.png" /> -->
     <!--
